--- a/templates/history.html
+++ b/templates/history.html
@@ -16,7 +16,7 @@
 <body>
   <h1>Play History</h1>
   <p>
-    <a href="/">← Back to playlists</a>
+    <a href="/">← Back to Home</a>
     {% if page > 1 %}
       | <a href="/history?page={{ page - 1 }}">« Prev</a>
     {% endif %}
