--- a/templates/logs.html
+++ b/templates/logs.html
@@ -47,7 +47,7 @@
 <body>
   <div class="header">
     <h1 style="margin:0;">Log Files</h1>
-    <a href="/" class="back-link">← Back to Playlists</a>
+    <a href="/" class="back-link">← Back to Home</a>
   </div>
   
   {% if logs %}
