--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <h1>Track Library</h1>
-  <p><a href="/">← Back to playlists</a></p>
+  <p><a href="/">← Back to Home</a></p>
   <table id="trackTable">
     <thead>
       <tr>
