--- a/templates/streams.html
+++ b/templates/streams.html
@@ -14,7 +14,7 @@
 </head>
 <body>
  <h1>Live Streams</h1>
- <p><a href="/">← Back to playlists</a></p>
+ <p><a href="/">← Back to Home</a></p>
  <table id="streamTable">
   <thead><tr><th>Title</th><th>ID</th><th>Listeners</th><th>Link</th></tr></thead>
   <tbody></tbody>
